# pari-android

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sak/paridemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  pari.cfg.in
app/src/main/java/com/sak/paridemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sak/paridemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
